WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152008
[WinCairo] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=152008
Summary
[WinCairo] Compile error.
peavo
Reported
2015-12-08 12:33:33 PST
GLuint is undefined.
Attachments
Patch
(1.09 KB, patch)
2015-12-08 12:41 PST
,
peavo
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-12-08 12:41:51 PST
Created
attachment 266929
[details]
Patch
Brent Fulgham
Comment 2
2015-12-08 13:12:56 PST
Comment on
attachment 266929
[details]
Patch r=me
peavo
Comment 3
2015-12-08 13:42:00 PST
(In reply to
comment #2
)
> Comment on
attachment 266929
[details]
> Patch > > r=me
Thanks!
peavo
Comment 4
2015-12-08 13:43:08 PST
Committed
r193780
: <
http://trac.webkit.org/changeset/193780
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug