[WinCairo] Compile error. https://bugs.webkit.org/show_bug.cgi?id=152008

Reviewed by Brent Fulgham.

GLuint is undefined.

* platform/graphics/GraphicsContext3D.h:


Canonical link: https://commits.webkit.org/170159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193780 268f45cc-cd09-0410-ab3c-d52691b4dbfc